# Minic

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  array  format.sh  global.s  hello  local_array  test.py  test.sh
cmake/: ExternalAntlr4Cpp.cmake
scripts/: generate.py
src/: AST.cc  AST.hh  ASTBuilder.cc  ASTBuilder.hh  ASTPrinter.cc  CodeGenVisitor.cc  Context.hh  Driver.cc  LLVM.hh  Log.hh  Parser.hh  Target.hh  TokenType.hh  Type.hh  Utils.hh  Visitor.cc  Visitor.hh  Wrapper.cc  Wrapper.hh  antlr.cc  ast.hh  lexer.hh  lexer.l  main.cc  parser.hh  scanner.hh  tokenType.hh  type.hh
src/Antlr4/: Minic.g4
src/grammar/: Minic.g4
test/: add.c  array.c  assignment.c  bitwise.c  break.c  callexpr.c  comment.c  compound_stmt_scope.c  continue.c  div.c  eqne.c  example.c  fib.c  function.c  function_decl_def.c  global.c  gtge.c  if.c  inttochar.c  local_array.c  logicaland.c  ltle.c  main.c  mul.c  recursive.c  sub.c  test.c  type_conversion.c  unary.c  vardecl.c  variable_shadowing.c  void_function.c  void_funtion.c  while.c
test/err/: nested_function.c  redefinition_variable_00.c  redefinition_variable_01.c  rvalue.c
test/lexer/: all.txt  assignment.c  example.c  example.mc  float.txt  main.c
